codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__mixed_running_hooks_share_background_activity_row.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"80 columns:\\n{}\\n120 columns:\\n{}\", hook_status_frame(&chat, 80),\nhook_status_frame(&chat, 120),)"
---
80 columns:
"                                                                                "
"● Running sleep 2                                                               "
"                                                                                "
"● Working (0s) · Running hooks                                                  "
"                                                                                "
"                                                                                "
"› Ask Codex to do anything                                                      "
"                                                                                "
"  Read Only        · gpt-5.6-sol default · /tmp/project                         "
120 columns:
"                                                                                                                        "
"● Running sleep 2                                                                                                       "
"                                                                                                                        "
"● Working (0s) · Running hooks                                                                                          "
"                                                                                                                        "
"                                                                                                                        "
"› Ask Codex to do anything                                                                                              "
"                                                                                                                        "
"  Read Only        · gpt-5.6-sol default · /tmp/project                                                                 "
