codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_picker_with_deepseek_provider.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. deepseek-flash  Latest frontier agentic coding model with image input.

  Press enter to confirm or esc to go back
